# axum-framework

./: Cargo.toml  README.md
crates/api/: Cargo.toml
crates/api/src/: main.rs
public/: landing.html
