[package]
name = "api"  # <-- ต้องชื่อนี้ เพื่อให้ตรงกับคำสั่ง -p api
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tower-http = { version = "0.5", features = ["fs", "trace"] }
axum-extra = { version = "0.9", features = ["cookie", "typed-header"] }
oauth2 = "4.4"
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
dotenvy = "0.15"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }